cleaned up code removed console logs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,16 @@
-<h1>
-  {{title}}
-</h1>
+<div class="container">
 
-<div class="test">
-	blah
-</div>
+	<h1>
+	{{title}}
+	</h1>
 
-
-<div>{{anotherVar}}</div>
-
-<div class="row">
-	<div class="col-xs-4">
-		<poke-list></poke-list>
+	<div class="row">
+		<div class="col-xs-4">
+			<poke-list></poke-list>
+		</div>
+		<div class="col-xs-8">
+			<poke-details></poke-details>
+		</div>
 	</div>
-	<div class="col-xs-8">
-		<poke-details></poke-details>
-	</div>
+	
 </div>
-
-
