mocked out html for collection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 		</div>
 		<div class="col-xs-8">
 			<poke-details></poke-details>
+			<poke-collection></poke-collection>
 		</div>
 	</div>
 	
