made button component

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -13,8 +13,16 @@
       </div>
     </div>
 
+    <div class="thumbnail">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" style="width: 100%;">
+      <div class="caption">
+        <p>somethins else goes here in the caption</p>
+      </div>
+    </div>
+
     <poke-thumbnail></poke-thumbnail>
-    <poke-button></poke-button>
+    <poke-button btnClass="danger" icon="minus-sign">Release</poke-button>
+    <poke-button btnClass="success" icon="plus-sign">Catch</poke-button>
 
   </div>
 </div>
