--- a/src/app/ui-library/button/button.component.html
+++ b/src/app/ui-library/button/button.component.html
@@ -1,3 +1,4 @@
-<p>
-  button works!
-</p>
+<button class="btn btn-{{btnClass}}">
+  <ng-content></ng-content>
+  <span class="icon glyphicon glyphicon-{{icon}}"></span>
+</button>
