placed poke-buttons

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -9,7 +9,7 @@
         <p><strong>Weight:</strong>1000</p>
         <p><strong>Base Experience:</strong>234</p>
         <p><strong>Height:</strong>20</p>
-        <p><button class="btn btn-danger">Release</button></p>
+        <p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
       </div>
     </div>
 
@@ -21,8 +21,8 @@
     </div>
 
     <poke-thumbnail></poke-thumbnail>
-    <poke-button btnClass="danger" icon="minus-sign">Release</poke-button>
-    <poke-button btnClass="success" icon="plus-sign">Catch</poke-button>
+    
+    
 
   </div>
 </div>
