--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -9,7 +9,7 @@
     </div>
     <br>
     <div>
-      <button class="btn btn-success" type="submit" (click)="catchMe()">Catch me!</button>
+      <poke-button btnClass="success" icon="plus-sign" (click)="catchMe()">Catch me!</poke-button>
     </div>
 
   </div>
