created poke-thumbnail component

--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,28 +1,33 @@
 <div class="row">
-  <div class="col-sm-6 col-md-4">
-    
-    <div class="thumbnail">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png" style="width: 100%;">
-      <div class="caption">
-        <h3>venusaur</h3>
-        <p><strong>Order:</strong>1000</p>
-        <p><strong>Weight:</strong>1000</p>
-        <p><strong>Base Experience:</strong>234</p>
-        <p><strong>Height:</strong>20</p>
-        <p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
-      </div>
-    </div>
+	<div class="col-sm-6 col-md-4">
+		
+		<div class="thumbnail">
+			<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png" style="width: 100%;">
+			<div class="caption">
+				<h3>venusaur</h3>
+				<p><strong>Order:</strong>1000</p>
+				<p><strong>Weight:</strong>1000</p>
+				<p><strong>Base Experience:</strong>234</p>
+				<p><strong>Height:</strong>20</p>
+				<p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
+			</div>
+		</div>
 
-    <div class="thumbnail">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" style="width: 100%;">
-      <div class="caption">
-        <p>somethins else goes here in the caption</p>
-      </div>
-    </div>
+		<div class="thumbnail">
+			<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" style="width: 100%;">
+			<div class="caption">
+				<p>somethins else goes here in the caption</p>
+			</div>
+		</div>
 
-    <poke-thumbnail></poke-thumbnail>
-    
-    
+		<poke-thumbnail imageUrl="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png">
+			<h3>venusaur</h3>
+			<p><strong>Order:</strong>1000</p>
+			<p><strong>Weight:</strong>1000</p>
+			<p><strong>Base Experience:</strong>234</p>
+			<p><strong>Height:</strong>20</p>
+			<p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
+		</poke-thumbnail>
 
-  </div>
+	</div>
 </div>
