--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -1,25 +1,5 @@
 <div class="row">
 	<div class="col-sm-6 col-md-4">
-		
-		<div class="thumbnail">
-			<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png" style="width: 100%;">
-			<div class="caption">
-				<h3>venusaur</h3>
-				<p><strong>Order:</strong>1000</p>
-				<p><strong>Weight:</strong>1000</p>
-				<p><strong>Base Experience:</strong>234</p>
-				<p><strong>Height:</strong>20</p>
-				<p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
-			</div>
-		</div>
-
-		<div class="thumbnail">
-			<img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" style="width: 100%;">
-			<div class="caption">
-				<p>somethins else goes here in the caption</p>
-			</div>
-		</div>
-
 		<poke-thumbnail imageUrl="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png">
 			<h3>venusaur</h3>
 			<p><strong>Order:</strong>1000</p>
@@ -28,6 +8,25 @@
 			<p><strong>Height:</strong>20</p>
 			<p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
 		</poke-thumbnail>
-
+	</div>
+	<div class="col-sm-6 col-md-4">
+		<poke-thumbnail imageUrl="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png">
+			<h3>venusaur</h3>
+			<p><strong>Order:</strong>1000</p>
+			<p><strong>Weight:</strong>1000</p>
+			<p><strong>Base Experience:</strong>234</p>
+			<p><strong>Height:</strong>20</p>
+			<p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
+		</poke-thumbnail>
+	</div>
+	<div class="col-sm-6 col-md-4">
+		<poke-thumbnail imageUrl="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png">
+			<h3>venusaur</h3>
+			<p><strong>Order:</strong>1000</p>
+			<p><strong>Weight:</strong>1000</p>
+			<p><strong>Base Experience:</strong>234</p>
+			<p><strong>Height:</strong>20</p>
+			<p><poke-button btnClass="danger" icon="minus-sign">Release</poke-button></p>
+		</poke-thumbnail>
 	</div>
 </div>
