--- a/src/app/collection/collection.component.html
+++ b/src/app/collection/collection.component.html
@@ -12,7 +12,45 @@
         <p><button class="btn btn-danger">Release</button></p>
       </div>
     </div>
+  </div>
+   <div class="col-sm-6 col-md-4">
+    
+    <div class="thumbnail">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png" style="width: 100%;">
+      <div class="caption">
+        <h3>venusaur</h3>
+        <p><strong>Order:</strong>1000</p>
+        <p><strong>Weight:</strong>1000</p>
+        <p><strong>Base Experience:</strong>234</p>
+        <p><strong>Height:</strong>20</p>
+        <p><button class="btn btn-danger">Release</button></p>
+      </div>
+    </div>
+  </div>
+   <div class="col-sm-6 col-md-4">
+    
+    <div class="thumbnail">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png" style="width: 100%;">
+      <div class="caption">
+        <h3>venusaur</h3>
+        <p><strong>Order:</strong>1000</p>
+        <p><strong>Weight:</strong>1000</p>
+        <p><strong>Base Experience:</strong>234</p>
+        <p><strong>Height:</strong>20</p>
+        <p><button class="btn btn-danger">Release</button></p>
+      </div>
+    </div>
+  </div>
+   <div class="col-sm-6 col-md-4">
 
-
+    <poke-thumbnail imageUrl="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/3.png">
+      <h3>venusaur</h3>
+      <p><strong>Order:</strong>1000</p>
+      <p><strong>Weight:</strong>1000</p>
+      <p><strong>Base Experience:</strong>234</p>
+      <p><strong>Height:</strong>20</p>
+      <p><button class="btn btn-danger">Release</button></p>
+    </poke-thumbnail>
+    
   </div>
 </div>
